<resources>
    <string name="app_name">Put It On</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="txt_ma"><b>ACCESORIOS</b></string>
    <string name="txt_mz"><b>ZAPATOS</b></string>
    <string name="txt_mp"><b>PANTALONES</b></string>
    <string name="txt_ms"><b>SUDADERAS</b></string>
    <string name="txt_ha"><b>ACCESORIOS</b></string>
    <string name="txt_hz"><b>ZAPATOS</b></string>
    <string name="txt_hp"><b>PANTALONES</b></string>
    <string name="txt_hs"><b>SUDADERAS</b></string>
    <string name="txt_form"><b>Rellene el formulario con los datos para el envío</b></string>
    <string name="et_nombre">Nombre y Apellidos</string>
    <string name="et_direccion">Dirección</string>
    <string name="et_cp">C.P.</string>
    <string name="et_ciudad">Ciudad</string>
    <string name="et_telefono">Teléfono</string>
    <string name="et_email">Email</string>
    <string name="txt_pago">Elija el método de pago:</string>
    <string name="btn_pago1">Efectivo</string>
    <string name="btn_pago2">Tarjeta</string>
    <string name="btn_confirmar">Confirmar compra</string>
    <string name="txt_total"><b>TOTAL:</b></string>
    <string name="btnCliente">Área de cliente</string>
    <string name="txt_iniciarsesion">Iniciar sesión</string>
    <string name="txt_usuario">Usuario</string>
    <string name="et_usuario">Usuario</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="et_contrasena">Contraseña</string>
    <string name="txt_cuenta">¿No tienes cuenta?</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="txt_error">Error al introducir los datos</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_registrar">Registrarse</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="et_correo">Correo electrónico</string>
    <string name="txt_error2">El usuario ya existe</string>
    <string name="btn_registro">Registro</string>
    <string name="logout">Cerrar sesión</string>
    <string name="btn_aniadir">Añadir al carrito</string>
    <string name="txt_cantidad">Cantidad:</string>
    <string name="btn_comprar">Comprar</string>
    <string name="txt_outfit">¡Enséñanos tu OUTFIT del día!</string>
    <string name="txt_c">Cantidad:</string>
</resources>