<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApartadosRopa">

    <ImageButton
        android:id="@+id/btn_ms"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/mujersudaderas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_mp"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/mujerpantalones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_ms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_ms"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ms" />

    <TextView
        android:id="@+id/txt_mp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="41dp"
        android:text="@string/txt_mp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mp" />

    <ImageButton
        android:id="@+id/btn_mz"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/mujerzapatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ms"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_mz"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_mz"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mz" />

    <ImageButton
        android:id="@+id/btn_ma"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/mujeraccesorios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_mp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_ma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_ma"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ma" />

</androidx.constraintlayout.widget.ConstraintLayout>