<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApartadosRopaH">

    <ImageButton
        android:id="@+id/btn_hs"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="46dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/hombresudaderas"
        app:layout_constraintBottom_toBottomOf="@+id/txt_hs"
        app:layout_constraintEnd_toStartOf="@+id/btn_hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_hp"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginEnd="29dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/hombrepantalones"
        app:layout_constraintBottom_toBottomOf="@+id/btn_hs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_hs"
        app:layout_constraintTop_toTopOf="@+id/btn_hs"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_hz"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/hombrezapatos"
        app:layout_constraintBottom_toBottomOf="@+id/txt_hz"
        app:layout_constraintEnd_toStartOf="@+id/btn_ha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_hs"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_ha"
        android:layout_width="157dp"
        android:layout_height="220dp"
        android:layout_marginEnd="29dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/hombreaccesorios"
        app:layout_constraintBottom_toBottomOf="@+id/btn_hz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_hz"
        app:layout_constraintTop_toTopOf="@+id/btn_hz"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_hs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_hs"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/btn_hs"
        app:layout_constraintTop_toBottomOf="@+id/btn_hs"  />

    <TextView
        android:id="@+id/txt_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txt_hp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/btn_hp"
        app:layout_constraintTop_toTopOf="@id/btn_hp" />

    <TextView
        android:id="@+id/txt_hz"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_hz"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hz" />

    <TextView
        android:id="@+id/txt_ha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_ha"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ha"
        app:layout_constraintTop_toBottomOf="@+id/btn_ha" />
</androidx.constraintlayout.widget.ConstraintLayout>